[package]
name = "tendermint_vp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
candid = "0.8.4"
ic-cdk = "0.7.1"
hex = "0.4.3"
sha2 = "0.10.6"
k256 = { version = "0.12.0", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }

tendermint_client = { path = "../tendermint_client", default-features = false }
ibc-proto = { version = "0.25.0", default-features = false }
ibc = { version = "0.28.0", default-features = false, features = ["serde"]}
prost = { version = "0.11", default-features = false }

hashbrown = "0.13.2"
ic-stable-structures = "0.5.4"
